<resources>
    <string name="app_name">2048</string>
    <string name="espacioEnBlanco"></string>
    <string name="zero">0</string>
    // English
    <string name="en_TxT">Tiny(3x3)</string>
    <string name="en_FxF">Classic(4x4)</string>
    <string name="en_SxS">Bigger(6x6)</string>
    <string name="en_ExE">Huge(8x8)</string>
    <string name="en_HighScore">High Score</string>
    <string name="en_Score">Score</string>
    <string name="en_Restart">Restart?</string>
    <string name="en_Yes">Yes</string>
    <string name="en_No">No</string>
    <string name="en_btnStartGame">Start Game</string>
    <string name="en_btnHighScores">High Scores</string>
    <string name="en_Winner">You Win!</string>
    <string name="en_Loser">You Lose!</string>
    <string name="en_Language">Language</string>
    <string name="en_Ok">OK</string>
    <string name="en_Cancel">Cancel</string>
    <string name="en_HowToPlay">How To Play?</string>
    <string name="en_AlertDialogLogin">Please enter a username to play.</string>
    <string name="en_AlertDialogTilesTitle">You Lose! xD</string>
    <string name="en_AlertDialogMessage">Play Again?</string>
    <string name="en_RemainingMoves">Moves</string>
    <string name="en_login">Log In</string>
    <string name="en_username">Username</string>
    <string name="en_prompt_email">Email</string>
    <string name="en_prompt_password">Password</string>
    <string name="en_action_register">Register</string>
    <string name="en_sign_up">Sign up</string>
    <string name="en_welcome">"Welcome !"</string>
    <string name="en_invalid_username">Invalid email</string>
    <string name="en_invalid_password">Password must have more than 5 characters</string>
    <string name="en_login_failed">"Login failed"</string>
    <string name="en_existent_account">Already a User?</string>
    <string name="en_alertLoginTitle">User does not exist!</string>
    <string name="en_alertLoginMessage">Do you wish to create a new user?</string>
    <string name="en_InvalidEmail">Invalid Email!</string>
    <string name="en_NotExistingEmail">Email does not exists!</string>
    <string name="en_WrongPassword">Wrong Password</string>
    <string name="en_minPassword">Password should have at least 4 characters</string>
    // Español
    <string name="es_TxT">Pequeño(3x3)</string>
    <string name="es_FxF">Clásico(4x4)</string>
    <string name="es_SxS">Más Grande(6x6)</string>
    <string name="es_ExE">Enorme(8x8)</string>
    <string name="es_HighScore">Récord</string>
    <string name="es_Score">Puntuación</string>
    <string name="es_Restart">Reiniciar?</string>
    <string name="es_Yes">Si</string>
    <string name="es_No">No</string>
    <string name="es_btnStartGame">Iniciar Partida</string>
    <string name="es_btnHighScores">Puntuaciones Más Altas</string>
    <string name="es_Winner">Ganaste!</string>
    <string name="es_Loser">Has Perdido :(</string>
    <string name="es_Language">Language</string>
    <string name="es_Ok">OK</string>
    <string name="es_Cancel">Cancel</string>
    <string name="es_HowToPlay">Como Jugar?</string>
    <string name="es_AlertDialogTitleLogin">Porfavor ingrese un nombre de usuario!</string>
    <string name="es_AlertDialogTilesTitle">Perdiste!</string>
    <string name="es_AlertDialogMessage">Jugar de nuevo?</string>
    <string name="es_RemainingMoves">Movimientos</string>
    <string name="es_title_activity_login">Ingresar</string>
    <string name="es_username">Usuario</string>
    <string name="es_prompt_email">Correo Electronico</string>
    <string name="es_prompt_password">Contraseña</string>
    <string name="es_action_register">Registrarse</string>
    <string name="es_welcome">"Bienvenido!"</string>
    <string name="es_invalid_username">Correo incorrecto</string>
    <string name="es_invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="es_login_failed">Error al ingresar</string>
    <string name="es_existent_account">Ya tienes una cuenta?</string>
    <string name="es_back_to_register">Regresar a registro</string>
</resources>
