<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register" android:background="@color/color0">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmailRegister"
            android:textSize="24sp" android:hint="@string/en_prompt_email"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.149" android:textColor="@color/colorTileTextDark"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPasswordRegister"
            android:textSize="24sp"
            android:textColor="@color/colorTileTextDark"
            android:hint="@string/en_prompt_password"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"
            app:layout_constraintEnd_toEndOf="@+id/etEmailRegister"
            app:layout_constraintStart_toStartOf="@+id/etEmailRegister"/>
    <Button
            android:text="@string/en_action_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister" app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
            app:layout_constraintStart_toStartOf="@+id/etPasswordRegister" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="24sp"
            android:background="@color/color16"/>
    <TextView
            android:text="@string/en_existent_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@+id/btnRegister" android:layout_marginTop="36dp"
            android:textSize="18sp" android:textColor="@color/colorTileTextDark" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.098"
            app:layout_constraintHorizontal_bias="0.515"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:visibility="gone" android:background="@color/colorTileTextDark"/>
    <TextView
            android:text="@string/en_InvalidEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWrongEmail" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordRegister"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/etEmailRegister" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etEmailRegister"/>
    <TextView
            android:text="@string/en_WrongPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWrongPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister" android:textColor="@color/colorAccent"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>