<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login"
        android:background="@color/color0">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUsernameLogin"
            android:textColor="@color/colorTileTextDark" android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/roboto" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="1.0" android:textSize="24sp" android:hint="@string/en_username"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.16000003"
            android:layout_marginTop="160dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPasswordRegister"
            android:textSize="24sp"
            android:textColor="@color/colorTileTextDark"
            android:hint="@string/en_prompt_password"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            app:layout_constraintStart_toStartOf="@+id/etUsernameLogin" app:layout_constraintEnd_toEndOf="@+id/etUsernameLogin"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etUsernameLogin"/>
    <Button
            android:text="@string/en_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
            app:layout_constraintStart_toStartOf="@+id/etPasswordRegister" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="24sp"
            android:background="@color/color16"/>
    <TextView
            android:text="@string/en_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignUp"
            android:textSize="18sp" android:textColor="@color/colorTileTextDark"
            app:layout_constraintStart_toStartOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintVertical_bias="0.091"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:visibility="gone" android:background="@color/colorTileTextDark"/>
    <TextView
            android:text="@string/en_InvalidEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWrongEmail" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordRegister" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsernameLogin"
            app:layout_constraintStart_toStartOf="@+id/etUsernameLogin"
            app:layout_constraintEnd_toEndOf="@+id/etUsernameLogin" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:textColor="@color/colorAccent"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/en_WrongPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWrongPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister" android:textColor="@color/colorAccent"
            android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>