<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/en_TxT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGameType" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ivGameType" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="30sp" android:textAlignment="center"
            android:textStyle="bold" android:fontFamily="@font/roboto"/>
    <ImageView
            android:layout_width="225dp"
            android:layout_height="179dp" app:srcCompat="@drawable/d3x3"
            android:id="@+id/ivGameType" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.503"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/right_arrow"
            android:id="@+id/ibtnRight"
            app:layout_constraintStart_toEndOf="@+id/tvGameType" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/ivGameType" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/left_arrow"
            android:id="@+id/ibtnLeft"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvGameType" android:layout_marginEnd="8dp"
            android:layout_marginTop="38dp" app:layout_constraintTop_toBottomOf="@+id/ivGameType"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/en_btnStartGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartGame" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGameType" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textStyle="bold"
            android:background="@color/color64" android:textColor="@color/colorTileTextLight"
            android:fontFamily="@font/roboto"/>
    <Button
            android:text="@string/en_btnHighScores"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHighScores" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStartGame" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textStyle="bold" android:background="@color/colorBackgroundGrid"
            android:textColor="@color/colorTileTextLight" android:fontFamily="@font/roboto"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/settings"
            android:id="@+id/ibtnSettings" android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/en_HowToPlay"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHowToPlay" android:textSize="18sp"
            android:fontFamily="@font/roboto" android:textStyle="bold" android:background="@color/color4"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnHighScores"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>