<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThreeTimesThree">

    <TextView
            android:text="@string/app_name"
            android:layout_width="94dp"
            android:layout_height="41dp"
            android:id="@+id/tvTitulo" android:textSize="36sp"
            android:fontFamily="@font/roboto" android:textAlignment="center" android:textStyle="bold"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorTileTextDark" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/grid_layout" app:layout_constraintVertical_bias="0.325"/>
    <RelativeLayout
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:visibility="visible"
            android:background="@color/colorBackgroundGrid" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" android:layout_marginStart="48dp"
            app:layout_constraintStart_toEndOf="@+id/tvTitulo"
            app:layout_constraintBottom_toTopOf="@id/ibtnRefresh"
            android:id="@+id/rlScore"
            app:layout_constraintVertical_bias="0.073" app:layout_constraintEnd_toStartOf="@+id/rlRemainingMovements"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/en_Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvScore"
                android:textSize="14sp" android:textStyle="bold" android:textAlignment="center"
                android:fontFamily="@font/roboto" android:layout_marginTop="2dp" android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                android:layout_alignParentStart="true" android:layout_marginStart="0dp"/>
        <TextView
                android:text="@string/espacioEnBlanco"
                android:layout_width="match_parent"
                android:layout_height="24dp" android:layout_alignParentStart="true"
                android:layout_marginStart="-1dp" android:layout_alignParentBottom="true"
                android:id="@+id/tvScoreNumber"
                android:layout_marginBottom="1dp" android:layout_marginTop="17dp" android:layout_below="@+id/tvScore"
                android:layout_alignParentEnd="true" android:layout_marginEnd="1dp" android:fontFamily="@font/roboto"
                android:textSize="18sp" android:textAlignment="center" android:textColor="@color/colorTileTextLight"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:id="@+id/rlRemainingMovements" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:background="@color/colorBackgroundGrid"
            android:layout_marginTop="56dp" android:layout_marginBottom="58dp"
            app:layout_constraintBottom_toTopOf="@+id/ibtnRefresh"
    >
        <TextView
                android:text="@string/en_RemainingMoves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRemainingMoves" android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="0dp" android:layout_marginTop="0dp"
                android:layout_alignParentTop="true" android:textAlignment="center" android:textStyle="bold"
                android:fontFamily="@font/roboto"/>
        <TextView
                android:text="@string/espacioEnBlanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRemainingMovesNumber" android:layout_marginTop="11dp"
                android:layout_alignParentStart="true" android:layout_marginStart="0dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="0dp" android:textAlignment="center"
                android:textSize="18sp" android:fontFamily="@font/roboto"
                android:textColor="@color/colorTileTextLight" android:layout_alignParentBottom="true"
                android:layout_marginBottom="11dp"/>
    </RelativeLayout>

    <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="333dp"
            android:layout_height="332dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorBackgroundGrid"
            android:nestedScrollingEnabled="false"
            android:padding="4dp"
            android:rowOrderPreserved="true"
            android:textAlignment="center"
            android:transitionGroup="true"
            android:useDefaultMargins="true"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="76dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rlScore" app:layout_constraintVertical_bias="0.789"
            tools:targetApi="ice_cream_sandwich">

        <TextView
                android:id="@+id/Pos0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/Pos8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="2"
                android:width="100dp"
                android:height="100dp"
                android:background="@color/color0"
                android:focusable="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/espacioEnBlanco"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTileTextLight"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"/>

    </GridLayout>
    <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/refresh"
            android:id="@+id/ibtnRefresh"
            android:background="@color/colorBackgroundGrid" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@+id/grid_layout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465" android:layout_marginTop="200dp"/>

    <Chronometer android:layout_width="115dp" android:layout_height="40dp"
                 android:id="@+id/chronometer" android:fontFamily="@font/roboto"
                 android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/ibtnRefresh"
                 android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/grid_layout" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/rlScore" app:layout_constraintHorizontal_bias="0.151"
                 app:layout_constraintVertical_bias="0.575"/>
</android.support.constraint.ConstraintLayout>